[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oauthcord.py"
version = "0.1.0"
description = "A Python library for interacting with the Discord API using OAuth2 authentication."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["aiohttp>=3.13.3"]

[dependency-groups]
dev = ["pyright==1.1.408", "ruff==0.15.2"]
docs = ["furo>=2025.9.25", "sphinx>=9.1.0,<9.2.0"]

[tool.pyright]
extraPaths = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportUnnecessaryIsInstance = false

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "TC"]
extend-select = ["I", "RUF"]
ignore = ["E402", "TC001", "TC002", "TC003", "TC004", "F405", "F403"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/oauthcord/__init__.py" = ["F403", "F405"]
"src/oauthcord/models/__init__.py" = ["F403", "F405"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
